# groundupdb

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  groundupdb.pro
.github/ISSUE_TEMPLATE/: feature_request.md
documentation/: ExplanatoryDiagrams.sdxml  GroundUpDB.archimate  GroundUpDB.archimate.bak  GroundUpDBNumbers.ods
documentation/performance-captures/: 20201008T1444-100k-windows-baseline.sleepy  20201008T1721-100k-windows-after-fix.sleepy
groundupdb/: CMakeLists.txt  Defines.pri  groundupdb.h  groundupdb.pro  groundupdbext.h
groundupdb-cli/: CMakeLists.txt  groundupdb-cli.pro  main.cpp
groundupdb-tests/: CMakeLists.txt  catch.hpp  datatypes-tests.cpp  dbmanagement-tests.cpp  encodedvalue-tests.cpp  groundupdb-tests.pro  hashedvalue-tests.cpp  hashing-tests.cpp  key-tests.cpp  keyvalue-bug-tests.cpp  keyvalue-tests.cpp  performance-tests.cpp  query-tests.cpp  tests.h
groundupdb/include/: database.h  groundupdb.h  hashes.h  is_container.h  query.h  types.h
groundupdb/include/extensions/: extdatabase.h  extquery.h  highwayhash.h
groundupdb/include/groundupdb/: database.h  groundupdb.h
groundupdb/include/groundupdb/extensions/: extdatabase.h
groundupdb/src/: database.cpp  filekeyvaluestore.cpp  groundupdb.cpp  hashes.cpp  highwayhash.cpp  memorykeyvaluestore.cpp  query.cpp  types.cpp
samples/: CMakeLists.txt
samples/003a-hashing-benefits/: 003a-hashing-benefits.pro  main.cpp
samples/008a-types/: main.cpp
